[project]
name = "rookognition"
version = "1.0.5"
authors = [
  { name="Nick Edner", email="nick@edner.dev" },
]
description = "A web-based chess vision exercise."
dependencies = [
  "flask","chess",
]
requires-python = ">=3.8"
license = { file="LICENSE.txt" }

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["rookognition"]
